log/build_2024-02-07_11-43-35/object_detection/stdout_stderr.log
running egg_info
writing ../../build/object_detection/object_detection.egg-info/PKG-INFO
writing dependency_links to ../../build/object_detection/object_detection.egg-info/dependency_links.txt
writing entry points to ../../build/object_detection/object_detection.egg-info/entry_points.txt
writing requirements to ../../build/object_detection/object_detection.egg-info/requires.txt
writing top-level names to ../../build/object_detection/object_detection.egg-info/top_level.txt
reading manifest file '../../build/object_detection/object_detection.egg-info/SOURCES.txt'
writing manifest file '../../build/object_detection/object_detection.egg-info/SOURCES.txt'
running build
running build_py
copying object_detection/image_converter.py -> /home/kevin/ros2_airweek/build/object_detection/build/lib/object_detection
running install
running install_lib
copying /home/kevin/ros2_airweek/build/object_detection/build/lib/object_detection/image_converter.py -> /home/kevin/ros2_airweek/install/object_detection/lib/python3.10/site-packages/object_detection
byte-compiling /home/kevin/ros2_airweek/install/object_detection/lib/python3.10/site-packages/object_detection/image_converter.py to image_converter.cpython-310.pyc
running install_data
  File "/home/kevin/ros2_airweek/install/object_detection/lib/python3.10/site-packages/object_detection/image_converter.py", line 52
    model.predict(cv_image, save=True, imgsz=320,640)
                                                    ^
SyntaxError: positional argument follows keyword argument

running install_egg_info
removing '/home/kevin/ros2_airweek/install/object_detection/lib/python3.10/site-packages/object_detection-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/object_detection/object_detection.egg-info to /home/kevin/ros2_airweek/install/object_detection/lib/python3.10/site-packages/object_detection-0.0.0-py3.10.egg-info
running install_scripts
Installing image_converter script to /home/kevin/ros2_airweek/install/object_detection/lib/object_detection
writing list of installed files to '/home/kevin/ros2_airweek/build/object_detection/install.log'
